--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.capyAppear {
+  position: relative;
+  left: -1000px;
+  height: 10%;
+}
